@@ -10,6 +10,7 @@
 
 
 Version 4.2.1
+ - Fixed: [ 2721892 ] Media Viewer ignores "Hide file name" config option (canajun2eh)
  - Fixed: [ 2702565 ] [4.2-4.2.5241] autocomplete not working when accented charac (wooc)
  - Added: Make Autocomplete an option in the GEDCOM config, Edit section (canajun2eh)
  - Fixed: [ 2634211 ] [4.2]+[4.1.6] Individual Add(ed) Facts not stored (fisharebest)
